--- a/database/db-deployment.yml
+++ b/database/db-deployment.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: denilsonbonatti/meubanco:1.0
+        image: walysonsilva/meubanco:1.0
         imagePullPolicy: Always
         ports:
         - containerPort: 3306
